unpackaged/main/default/objects/ServiceAppointment/fields/Ack_SMS_Sent__c.field-meta.xml
<CustomField>
    <fullName>Ack_SMS_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ack SMS Sent?</label>
    <type>Checkbox</type>
</CustomField>