unpackaged/main/default/objects/ServiceAppointment/fields/Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledge</label>
    <type>Checkbox</type>
</CustomField>