unpackaged/main/default/objects/ServiceAppointment/fields/ActualEnd__c.field-meta.xml
<CustomField>
    <fullName>ActualEnd__c</fullName>
    <formula>ActualEndTime</formula>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>