unpackaged/main/default/objects/ServiceAppointment/fields/ActualStart_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>ActualStart_Lightbox__c</fullName>
    <formula>ActualStartTime</formula>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>