unpackaged/main/default/objects/ServiceAppointment/fields/Address_Change_Counter__c.field-meta.xml
<CustomField>
    <fullName>Address_Change_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Address Change Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>