unpackaged/main/default/objects/ServiceAppointment/fields/Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Address_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Changed</label>
    <type>Checkbox</type>
</CustomField>