unpackaged/main/default/objects/ServiceAppointment/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF(
OR(ISPICKVAL(Status, &#39;Cleared&#39; ), ISPICKVAL(Status, &#39;Canceled&#39;)),
(ActualEndTime - CreatedDate)*1440, (NOW() - CreatedDate)*1440
)</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>