unpackaged/main/default/objects/ServiceAppointment/fields/Appointment_Assistant_Tracking_URL__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Assistant_Tracking_URL__c</fullName>
    <label>Appointment Assistant Tracking URL</label>
    <type>Url</type>
</CustomField>