unpackaged/main/default/objects/ServiceAppointment/fields/Appointment_Number_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Number_Work_Type__c</fullName>
    <formula>AppointmentNumber   &amp;&quot;  &quot;&amp;    Work_Type_Name__c</formula>
    <label>Appointment Number + Work Type</label>
    <type>Text</type>
</CustomField>