unpackaged/main/default/objects/ServiceAppointment/fields/Appt_Number_Ben_Level_Cash__c.field-meta.xml
<CustomField>
    <fullName>Appt_Number_Ben_Level_Cash__c</fullName>
    <description>For FSL Mobile App - displays the Appt Number the Work Type and IF cash call</description>
    <formula>IF( Payment_Required__c =true,
 AppointmentNumber &amp;&quot;|&quot;&amp;  Member_Benefit_Level__c  &amp;&quot;|$CASH$&quot;,
 AppointmentNumber &amp;&quot;|&quot;&amp;  Member_Benefit_Level__c  )</formula>
    <label>Appt Number + Benefit Level + Cash</label>
    <type>Text</type>
</CustomField>