unpackaged/main/default/objects/ServiceAppointment/fields/Appt_Number_Cash_Work_type__c.field-meta.xml
<CustomField>
    <fullName>Appt_Number_Cash_Work_type__c</fullName>
    <description>appt number and cash call</description>
    <formula>IF( Payment_Required__c =true,
 AppointmentNumber &amp;&quot;|&quot;&amp;&quot;$CASH$|&quot; &amp; Work_Type_Name__c,
 AppointmentNumber &amp;&quot;|&quot;&amp; Work_Type_Name__c )</formula>
    <label>Appt Number + Cash + Work type</label>
    <type>Text</type>
</CustomField>