unpackaged/main/default/objects/ServiceAppointment/fields/Arrival_Window_End_Time_Update_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Window_End_Time_Update_Timestamp__c</fullName>
    <description>timestamp flag win Arrival Window End Time update by 2nd Policy logic</description>
    <label>Arrival Window End Time Update Timestamp</label>
    <type>DateTime</type>
</CustomField>