unpackaged/main/default/objects/ServiceAppointment/fields/ArrivalWindow__c.field-meta.xml
<CustomField>
    <fullName>ArrivalWindow__c</fullName>
    <formula>(BLANKVALUE(SchedStartTime, PTA__c)) - (VALUE(MID( Work_Order__r.Timezone_Offset__c ,5,2))/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ArrivalWindow</label>
    <type>DateTime</type>
</CustomField>