unpackaged/main/default/objects/ServiceAppointment/fields/Arrived_Within_PTA__c.field-meta.xml
<CustomField>
    <fullName>Arrived_Within_PTA__c</fullName>
    <formula>PTA__c &gt; ActualStartTime</formula>
    <label>Arrived Within PTA</label>
    <type>Checkbox</type>
</CustomField>