unpackaged/main/default/objects/ServiceAppointment/fields/Assigned_Resource_count__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Resource_count__c</fullName>
    <label>Assigned Resource count</label>
    <summaryForeignKey>AssignedResource.ServiceAppointmentId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>