unpackaged/main/default/objects/ServiceAppointment/fields/Assigned_Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Service_Territory__c</fullName>
    <formula>ServiceTerritory.Name</formula>
    <label>Assigned Service Territory</label>
    <type>Text</type>
</CustomField>