unpackaged/main/default/objects/ServiceAppointment/fields/Auto_On_Location__c.field-meta.xml
<CustomField>
    <fullName>Auto_On_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto On Location</label>
    <type>Checkbox</type>
</CustomField>