unpackaged/main/default/objects/ServiceAppointment/fields/AutoCreated__c.field-meta.xml
<CustomField>
    <fullName>AutoCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value set to true if the service appointment was auto-created via integration/automation, otherwise false.</description>
    <label>AutoCreated</label>
    <type>Checkbox</type>
</CustomField>