unpackaged/main/default/objects/ServiceAppointment/fields/Automation_Level__c.field-meta.xml
<CustomField>
    <fullName>Automation_Level__c</fullName>
    <formula>IF(AND(AutoScheduled__c = TRUE, Dispatcher_Reassignment__c = FALSE),&#39;Fully Automated&#39;, 
IF(Dispatcher_Reassignment__c = TRUE, &#39;Re-Assign&#39;, &#39;Manual&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automation Level</label>
    <type>Text</type>
</CustomField>