unpackaged/main/default/objects/ServiceAppointment/fields/AutoScheduled__c.field-meta.xml
<CustomField>
    <fullName>AutoScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Value set to true if the service appointment was auto-scheduled via integration/automation, otherwise false.  Auto-scheduled means the service appointment was auto-created via integration/automation (AutoCreated__c) and the Scheduled Start Time was not null.</description>
    <label>AutoScheduled</label>
    <type>Checkbox</type>
</CustomField>