unpackaged/main/default/objects/ServiceAppointment/fields/AutoScheduled_Power_of_1__c.field-meta.xml
<CustomField>
    <fullName>AutoScheduled_Power_of_1__c</fullName>
    <formula>IF( AutoScheduled__c = TRUE, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutoScheduled Power of 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>