unpackaged/main/default/objects/ServiceAppointment/fields/Calculate_PTA_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculate_PTA_Date__c</fullName>
    <formula>DATETIMEVALUE( PTA__c + ((PTA__c - CreatedDate) * 24 / 24))</formula>
    <label>Calculate PTA Date</label>
    <type>DateTime</type>
</CustomField>