unpackaged/main/default/objects/ServiceAppointment/fields/Call_Age__c.field-meta.xml
<CustomField>
    <fullName>Call_Age__c</fullName>
    <description>Age of the call formatted to display on Gantt tooltip when hovering over SA.</description>
    <formula>IF(Age__c &gt; 7200,&#39;120:00:00&#39;, TEXT(FLOOR(Age__c/60))&amp;&#39;:&#39;&amp;TEXT(FLOOR(MOD(Age__c,60)))&amp;&#39;:00&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <type>Text</type>
</CustomField>