unpackaged/main/default/objects/ServiceAppointment/fields/Call_Origin__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin__c</fullName>
    <description>Call Origin from Service Appointment</description>
    <formula>Work_Order__r.Call_Origin__c</formula>
    <label>Call Origin</label>
    <type>Text</type>
</CustomField>