unpackaged/main/default/objects/ServiceAppointment/fields/Call_Origin_OrgCode__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin_OrgCode__c</fullName>
    <formula>Work_Order__r.Call_Origin_OrgCode__c</formula>
    <label>Call Origin OrgCode</label>
    <type>Text</type>
</CustomField>