unpackaged/main/default/objects/ServiceAppointment/fields/Call_Origin_OrgName__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin_OrgName__c</fullName>
    <formula>Work_Order__r.Call_Origin_OrgName__c</formula>
    <label>Call Origin OrgName</label>
    <type>Text</type>
</CustomField>