unpackaged/main/default/objects/ServiceAppointment/fields/Cancel_From_Flow__c.field-meta.xml
<CustomField>
    <fullName>Cancel_From_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel From Flow</label>
    <type>Checkbox</type>
</CustomField>