unpackaged/main/default/objects/ServiceAppointment/fields/Canceled_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Timestamp__c</fullName>
    <label>Canceled Timestamp</label>
    <type>DateTime</type>
</CustomField>