unpackaged/main/default/objects/ServiceAppointment/fields/Captivated_Status__c.field-meta.xml
<CustomField>
    <fullName>Captivated_Status__c</fullName>
    <formula>CASE(TEXT(Status), 
&#39;Spotted&#39;, &#39;SP&#39;, 
&#39;Scheduled&#39;, &#39;AS&#39;,
&#39;Dispatched&#39;, &#39;DI&#39;,
&#39;En Route&#39;, &#39;ER&#39;,
&#39;On Location&#39;, &#39;OL&#39;,
&#39;Cleared&#39;, &#39;CL&#39;,
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Captivated Status</label>
    <type>Text</type>
</CustomField>