unpackaged/main/default/objects/ServiceAppointment/fields/Cash_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Cash_Indicator__c</fullName>
    <description>This is derived from the Case Object Cash Indicator</description>
    <formula>Case__r.Cash_Indicator__c</formula>
    <inlineHelpText>This denotes that the member is over entitlements</inlineHelpText>
    <label>Cash Indicator</label>
    <type>Text</type>
</CustomField>