unpackaged/main/default/objects/ServiceAppointment/fields/City_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>City_Lightbox__c</fullName>
    <formula>City</formula>
    <label>City</label>
    <type>Text</type>
</CustomField>