unpackaged/main/default/objects/ServiceAppointment/fields/Cleared_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>Cleared_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared Violation Check</label>
    <type>Checkbox</type>
</CustomField>