unpackaged/main/default/objects/ServiceAppointment/fields/Cloned_Duplicate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Duplicate_Parent__c</fullName>
    <formula>Work_Order__r.Cloned_Duplicate_Parent__c</formula>
    <label>Cloned/Duplicate Parent</label>
    <type>Text</type>
</CustomField>