unpackaged/main/default/objects/ServiceAppointment/fields/ClonedParent__c.field-meta.xml
<CustomField>
    <fullName>ClonedParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned/Duplicate Parent</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Service Appointments (Cloned/Duplicate Parent)</relationshipLabel>
    <relationshipName>ClonedParent</relationshipName>
    <type>Lookup</type>
</CustomField>