unpackaged/main/default/objects/ServiceAppointment/fields/Community_Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_Tracking_Id__c</fullName>
    <formula>RIGHT( AppointmentNumber , 2)+ RIGHT( Work_Order__r.WorkOrderNumber ,2)</formula>
    <label>Community Tracking Id</label>
    <type>Text</type>
</CustomField>