unpackaged/main/default/objects/ServiceAppointment/fields/Contact_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Membership_Type__c</fullName>
    <formula>Contact.Membership_Type__c</formula>
    <label>Membership Type</label>
    <type>Text</type>
</CustomField>