unpackaged/main/default/objects/ServiceAppointment/fields/Critical_Aging__c.field-meta.xml
<CustomField>
    <fullName>Critical_Aging__c</fullName>
    <description>Time that SA and WO will change priority to critical</description>
    <formula>CreatedDate + (VALUE($Label.AAA_Aged_WO_SA_Priority_Esc_Timing)/1440)</formula>
    <label>Critical Aging</label>
    <type>DateTime</type>
</CustomField>