unpackaged/main/default/objects/ServiceAppointment/fields/CrossStreet2_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>CrossStreet2_Lightbox__c</fullName>
    <formula>Cross_Street_2__c</formula>
    <label>Cross Street 2</label>
    <type>Text</type>
</CustomField>