unpackaged/main/default/objects/ServiceAppointment/fields/CrossStreet_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>CrossStreet_Lightbox__c</fullName>
    <formula>Cross_Street__c</formula>
    <label>Cross Street</label>
    <type>Text</type>
</CustomField>