unpackaged/main/default/objects/ServiceAppointment/fields/D3_AAR_Id__c.field-meta.xml
<CustomField>
    <fullName>D3_AAR_Id__c</fullName>
    <label>D3 AAR Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>