unpackaged/main/default/objects/ServiceAppointment/fields/D3_Address_Geocode__c.field-meta.xml
<CustomField>
    <fullName>D3_Address_Geocode__c</fullName>
    <label>D3 Address Geocode</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>