unpackaged/main/default/objects/ServiceAppointment/fields/D3_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>D3_Call_ID__c</fullName>
    <label>Call ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>