unpackaged/main/default/objects/ServiceAppointment/fields/D3_Call_Key__c.field-meta.xml
<CustomField>
    <fullName>D3_Call_Key__c</fullName>
    <description>D3 Call Key From Work Order</description>
    <formula>Work_Order__r.D3_Call_Key__c</formula>
    <label>D3_Call_Key</label>
    <type>Text</type>
</CustomField>