unpackaged/main/default/objects/ServiceAppointment/fields/D3_Sync_Issue__c.field-meta.xml
<CustomField>
    <fullName>D3_Sync_Issue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D3 Sync Issue</label>
    <type>Checkbox</type>
</CustomField>