unpackaged/main/default/objects/ServiceAppointment/fields/D3_Tow_Mileage__c.field-meta.xml
<CustomField>
    <fullName>D3_Tow_Mileage__c</fullName>
    <label>D3 Tow Mileage</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>