unpackaged/main/default/objects/ServiceAppointment/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Enough Trucks</fullName>
            </value>
            <value>
                <fullName>Not My Service Area</fullName>
            </value>
            <value>
                <fullName>Equipment Required Unavailable</fullName>
            </value>
            <value>
                <fullName>Facility Mismarked</fullName>
            </value>
            <value>
                <fullName>Facility Closed</fullName>
            </value>
            <value>
                <fullName>No Driver Available</fullName>
            </value>
            <value>
                <fullName>Extended ETA</fullName>
            </value>
            <value>
                <fullName>Refused Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>