unpackaged/main/default/objects/ServiceAppointment/fields/Decline_Work_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Work_Reason__c</fullName>
    <label>Decline Work Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipment Unavailable</fullName>
            </value>
            <value>
                <fullName>Out of Primary Area</fullName>
            </value>
            <value>
                <fullName>Station Busy - AAA Call</fullName>
            </value>
            <value>
                <fullName>Station Busy - Commercial Call</fullName>
            </value>
            <value>
                <fullName>Third Party Dispatcher Declined Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>