unpackaged/main/default/objects/ServiceAppointment/fields/Dispatch_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatch Violation Check</label>
    <type>Checkbox</type>
</CustomField>