unpackaged/main/default/objects/ServiceAppointment/fields/Dispatcher_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Dispatcher_Reassignment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the call was auto-scheduled and a dispatcher manually overrode the assignment to assign to another technician</description>
    <label>Dispatcher Reassignment</label>
    <type>Checkbox</type>
</CustomField>