unpackaged/main/default/objects/ServiceAppointment/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>DISTANCE(GEOLOCATION(Latitude, Longitude) ,  GEOLOCATION(Service_Resource__r.LastKnownLatitude,Service_Resource__r.LastKnownLongitude  ),&#39;mi&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>