unpackaged/main/default/objects/ServiceAppointment/fields/Do_Driver_Needs_Help__c.field-meta.xml
<CustomField>
    <fullName>Do_Driver_Needs_Help__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Driver Needs Help</label>
    <type>Checkbox</type>
</CustomField>