unpackaged/main/default/objects/ServiceAppointment/fields/Driver_Needs_Help__c.field-meta.xml
<CustomField>
    <fullName>Driver_Needs_Help__c</fullName>
    <description>This will auto-populate by flow once the driver selects the reason from app.</description>
    <label>Driver Needs Help</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Please Call Me</fullName>
                <default>true</default>
                <label>Please Call Me</label>
            </value>
            <value>
                <fullName>Will Not Meet PTA</fullName>
            </value>
            <value>
                <fullName>Member Needs a Tow</fullName>
            </value>
            <value>
                <fullName>Emergency (ER Situation Only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>