unpackaged/main/default/objects/ServiceAppointment/fields/Driver_Needs_Help_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Driver_Needs_Help_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver Needs Help</label>
    <type>Checkbox</type>
</CustomField>