unpackaged/main/default/objects/ServiceAppointment/fields/DriverDirections_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>DriverDirections_Lightbox__c</fullName>
    <formula>Driving_Directions__c</formula>
    <label>Driver Directions</label>
    <type>Text</type>
</CustomField>