unpackaged/main/default/objects/ServiceAppointment/fields/Driving_Directions__c.field-meta.xml
<CustomField>
    <fullName>Driving_Directions__c</fullName>
    <label>Driver Directions</label>
    <length>250</length>
    <type>Text</type>
</CustomField>