unpackaged/main/default/objects/ServiceAppointment/fields/Drop_Box_Info__c.field-meta.xml
<CustomField>
    <fullName>Drop_Box_Info__c</fullName>
    <label>Drop Box Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>