unpackaged/main/default/objects/ServiceAppointment/fields/Early_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Early_Arrival__c</fullName>
    <formula>ActualStartTime &lt;  Original_Scheduled_Start__c</formula>
    <label>Early Arrival</label>
    <type>Checkbox</type>
</CustomField>