unpackaged/main/default/objects/ServiceAppointment/fields/En_Route_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>En_Route_Timestamp__c</fullName>
    <label>En Route Timestamp</label>
    <type>DateTime</type>
</CustomField>