unpackaged/main/default/objects/ServiceAppointment/fields/En_Route_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>En_Route_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Route Violation Check</label>
    <type>Checkbox</type>
</CustomField>