unpackaged/main/default/objects/ServiceAppointment/fields/ER_Mileage__c.field-meta.xml
<CustomField>
    <fullName>ER_Mileage__c</fullName>
    <formula>DISTANCE (GEOLOCATION(IF(Latitude =0,D3_Address_Geocode__Latitude__s,Latitude ),
IF(Longitude = 0,D3_Address_Geocode__Longitude__s,Longitude)),
GEOLOCATION(Resource_Latitude__c,Resource_Longitude__c),&#39;mi&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>En Route Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>