unpackaged/main/default/objects/ServiceAppointment/fields/ERS_Notes__c.field-meta.xml
<CustomField>
    <fullName>ERS_Notes__c</fullName>
    <description>SSFI-1264 Driver&#39;s Notes -Update Page Layouts for Consistency</description>
    <label>Driver’s Notes</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>