unpackaged/main/default/objects/ServiceAppointment/fields/Expired_SMS_counter__c.field-meta.xml
<CustomField>
    <fullName>Expired_SMS_counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>To Store the number of Expired SMS sent to customer</description>
    <label>Expired SMS counter</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>