unpackaged/main/default/objects/ServiceAppointment/fields/Extend_Work_Time_Counter__c.field-meta.xml
<CustomField>
    <fullName>Extend_Work_Time_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Extend Work Time Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>