unpackaged/main/default/objects/ServiceAppointment/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSL-Spotted Facility</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>