unpackaged/main/default/objects/ServiceAppointment/fields/Facility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Facility_Phone__c</fullName>
    <formula>ServiceTerritory.Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Phone</label>
    <type>Text</type>
</CustomField>