unpackaged/main/default/objects/ServiceAppointment/fields/FSL_Actual_Miles_Driven__c.field-meta.xml
<CustomField>
    <fullName>FSL_Actual_Miles_Driven__c</fullName>
    <inlineHelpText>Miles driven is coming from the Glympse - Distance travelled by phase</inlineHelpText>
    <label>Actual Miles Driven</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>