unpackaged/main/default/objects/ServiceAppointment/fields/FSL_Actual_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>FSL_Actual_Travel_Time__c</fullName>
    <formula>IF(RecordType.Name=&#39;Breakdown&#39;, (ActualStartTime-FSL_Enroute_Time_Stamp__c)*24*60, 
IF(RecordType.Name=&#39;Tow&#39;, (ActualStartTime-FSL_In_Tow_Timestamp__c)*24*60,null) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Travel Time(Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>