unpackaged/main/default/objects/ServiceAppointment/fields/FSL_Emergency_Lightbox__c.field-meta.xml
<CustomField>
    <fullName>FSL_Emergency_Lightbox__c</fullName>
    <formula>FSL__Emergency__c = TRUE</formula>
    <label>Emergency</label>
    <type>Checkbox</type>
</CustomField>