unpackaged/main/default/objects/ServiceAppointment/fields/FSL_In_Tow_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>FSL_In_Tow_Timestamp__c</fullName>
    <label>In Tow Timestamp</label>
    <type>DateTime</type>
</CustomField>