unpackaged/main/default/objects/ServiceAppointment/fields/FSL_IsLight_Service__c.field-meta.xml
<CustomField>
    <fullName>FSL_IsLight_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Light Service</label>
    <type>Checkbox</type>
</CustomField>