unpackaged/main/default/objects/ServiceAppointment/fields/FSL_Member_Vehicle_Name__c.field-meta.xml
<CustomField>
    <fullName>FSL_Member_Vehicle_Name__c</fullName>
    <label>Member Vehicle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>