unpackaged/main/default/objects/ServiceAppointment/fields/FSL_Needs_Address__c.field-meta.xml
<CustomField>
    <fullName>FSL_Needs_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Address</label>
    <type>Checkbox</type>
</CustomField>