unpackaged/main/default/objects/ServiceAppointment/fields/FSL_Street_City__c.field-meta.xml
<CustomField>
    <fullName>FSL_Street_City__c</fullName>
    <formula>Street+&#39;, &#39;+City+&#39;, &#39;+ State +&#39; &#39;+ PostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street &amp; City</label>
    <type>Text</type>
</CustomField>