unpackaged/main/default/objects/ServiceAppointment/fields/Highway__c.field-meta.xml
<CustomField>
    <fullName>Highway__c</fullName>
    <label>Highway</label>
    <length>255</length>
    <type>Text</type>
</CustomField>