unpackaged/main/default/objects/ServiceAppointment/fields/In_Tow_Violation_Check__c.field-meta.xml
<CustomField>
    <fullName>In_Tow_Violation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Tow Violation Check</label>
    <type>Checkbox</type>
</CustomField>