unpackaged/main/default/objects/ServiceAppointment/fields/Is_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Is_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cleared</label>
    <type>Checkbox</type>
</CustomField>