unpackaged/main/default/objects/ServiceAppointment/fields/Is_Landline__c.field-meta.xml
<CustomField>
    <fullName>Is_Landline__c</fullName>
    <formula>Work_Order__r.Servicing_Technology_Type__c == &#39;Landline&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Landline</label>
    <type>Checkbox</type>
</CustomField>