unpackaged/main/default/objects/ServiceAppointment/fields/Is_Medium_Priority_Non_Battery_Job__c.field-meta.xml
<CustomField>
    <fullName>Is_Medium_Priority_Non_Battery_Job__c</fullName>
    <formula>AND(NOT(OR(WorkType.Name= &quot;Battery Test&quot;, WorkType.Name= &quot;Battery Jumpstart&quot;)), ISPICKVAL(Work_Order__r.Priority, &#39;Medium&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Medium Priority Non Battery Job</label>
    <type>Checkbox</type>
</CustomField>