unpackaged/main/default/objects/ServiceAppointment/fields/Is_Older_SA_ASAP_Boost__c.field-meta.xml
<CustomField>
    <fullName>Is_Older_SA_ASAP_Boost__c</fullName>
    <formula>AND(IF(NOW() &gt; (ArrivalWindowStartTime + ((ArrivalWindowEndTime -ArrivalWindowStartTime) / 2)), true, false ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Older SA (ASAP Boost)</label>
    <type>Checkbox</type>
</CustomField>