unpackaged/main/default/objects/ServiceAppointment/fields/Is_Omni_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Omni_Case_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Omni Case Created ?</label>
    <type>Checkbox</type>
</CustomField>