unpackaged/main/default/objects/ServiceAppointment/fields/isBreakdown__c.field-meta.xml
<CustomField>
    <fullName>isBreakdown__c</fullName>
    <formula>RecordType.DeveloperName = &#39;Breakdown&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Breakdown</label>
    <type>Checkbox</type>
</CustomField>