unpackaged/main/default/objects/ServiceAppointment/fields/isCritical__c.field-meta.xml
<CustomField>
    <fullName>isCritical__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;Critical&#39;), TRUE, FALSE)</formula>
    <label>Critical Priority</label>
    <type>Checkbox</type>
</CustomField>