unpackaged/main/default/objects/ServiceAppointment/fields/isHighPriority__c.field-meta.xml
<CustomField>
    <fullName>isHighPriority__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;High&#39;), TRUE, FALSE)</formula>
    <label>High Priority</label>
    <type>Checkbox</type>
</CustomField>