unpackaged/main/default/objects/ServiceAppointment/fields/isLowPriority__c.field-meta.xml
<CustomField>
    <fullName>isLowPriority__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;Low&#39;), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Low Priority</label>
    <type>Checkbox</type>
</CustomField>