unpackaged/main/default/objects/ServiceAppointment/fields/isMediumPriority__c.field-meta.xml
<CustomField>
    <fullName>isMediumPriority__c</fullName>
    <formula>If(ISPICKVAL(Work_Order__r.Priority, &#39;Medium&#39;), TRUE, FALSE)</formula>
    <label>Medium Priority</label>
    <type>Checkbox</type>
</CustomField>