unpackaged/main/default/objects/ServiceAppointment/fields/isScheduledByDispatcher__c.field-meta.xml
<CustomField>
    <fullName>isScheduledByDispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispatcher Scheduled</label>
    <type>Checkbox</type>
</CustomField>